# serializer version: 1
# name: test_get_capabilities
  dict({
    'temperatures': dict({
      'celsius': dict({
        'max': 25.0,
        'min': 5.0,
        'step': 0.5,
      }),
      'fahrenheit': dict({
        'max': 77.0,
        'min': 41.0,
        'step': 0.5,
      }),
    }),
    'type': 'HEATING',
  })
# ---
# name: test_get_device_info
  dict({
    'celsius': 0.0,
    'fahrenheit': 0.0,
  })
# ---
# name: test_get_devices
  list([
    dict({
      'battery_state': None,
      'characteristics': dict({
        'capabilities': list([
          'RADIO_ENCRYPTION_KEY_ACCESS',
        ]),
      }),
      'child_lock_enabled': None,
      'connection_state': dict({
        'timestamp': '2024-02-27T20:13:45.407Z',
        'value': True,
      }),
      'current_fw_version': '92.1',
      'device_type': 'IB01',
      'in_pairing_mode': False,
      'mounting_state': None,
      'mounting_state_with_error': None,
      'orientation': None,
      'serial_no': 'SerialNo1',
      'short_serial_no': 'ShortSerialNo1',
    }),
    dict({
      'battery_state': 'NORMAL',
      'characteristics': dict({
        'capabilities': list([
          'INSIDE_TEMPERATURE_MEASUREMENT',
          'IDENTIFY',
        ]),
      }),
      'child_lock_enabled': True,
      'connection_state': dict({
        'timestamp': '2024-02-27T20:20:20.921Z',
        'value': True,
      }),
      'current_fw_version': '95.1',
      'device_type': 'VA02',
      'in_pairing_mode': None,
      'mounting_state': dict({
        'timestamp': '2024-02-19T17:23:30.537Z',
        'value': 'CALIBRATED',
      }),
      'mounting_state_with_error': 'CALIBRATED',
      'orientation': 'HORIZONTAL',
      'serial_no': 'SerialNo2',
      'short_serial_no': 'ShortSerialNo2',
    }),
    dict({
      'battery_state': 'NORMAL',
      'characteristics': dict({
        'capabilities': list([
          'INSIDE_TEMPERATURE_MEASUREMENT',
          'IDENTIFY',
        ]),
      }),
      'child_lock_enabled': True,
      'connection_state': dict({
        'timestamp': '2024-02-27T20:23:13.342Z',
        'value': True,
      }),
      'current_fw_version': '95.1',
      'device_type': 'VA02',
      'in_pairing_mode': None,
      'mounting_state': dict({
        'timestamp': '2024-02-26T13:33:10.647Z',
        'value': 'CALIBRATED',
      }),
      'mounting_state_with_error': 'CALIBRATED',
      'orientation': 'HORIZONTAL',
      'serial_no': 'SerialNo3',
      'short_serial_no': 'ShortSerialNo3',
    }),
    dict({
      'battery_state': 'NORMAL',
      'characteristics': dict({
        'capabilities': list([
          'INSIDE_TEMPERATURE_MEASUREMENT',
          'IDENTIFY',
        ]),
      }),
      'child_lock_enabled': True,
      'connection_state': dict({
        'timestamp': '2024-02-27T20:23:02.849Z',
        'value': True,
      }),
      'current_fw_version': '95.1',
      'device_type': 'VA02',
      'in_pairing_mode': None,
      'mounting_state': dict({
        'timestamp': '2023-10-09T15:39:08.131Z',
        'value': 'CALIBRATED',
      }),
      'mounting_state_with_error': 'CALIBRATED',
      'orientation': 'HORIZONTAL',
      'serial_no': 'SerialNo4',
      'short_serial_no': 'ShortSerialNo4',
    }),
    dict({
      'battery_state': 'NORMAL',
      'characteristics': dict({
        'capabilities': list([
          'INSIDE_TEMPERATURE_MEASUREMENT',
          'IDENTIFY',
        ]),
      }),
      'child_lock_enabled': True,
      'connection_state': dict({
        'timestamp': '2024-02-27T20:16:13.890Z',
        'value': True,
      }),
      'current_fw_version': '95.1',
      'device_type': 'VA02',
      'in_pairing_mode': None,
      'mounting_state': dict({
        'timestamp': '2024-02-04T10:17:00.266Z',
        'value': 'CALIBRATED',
      }),
      'mounting_state_with_error': 'CALIBRATED',
      'orientation': 'HORIZONTAL',
      'serial_no': 'SerialNo5',
      'short_serial_no': 'ShortSerialNo5',
    }),
  ])
# ---
# name: test_get_home_state
  dict({
    'presence': 'HOME',
    'presence_locked': True,
    'show_home_presence_switch_button': True,
    'show_switch_to_auto_geofencing_button': None,
  })
# ---
# name: test_get_me
  dict({
    'email': 'user@domain.tld',
    'homes': list([
      dict({
        'id': 1,
        'name': 'home name',
      }),
    ]),
    'id': '5',
    'locale': 'nl',
    'name': 'test_user',
    'username': 'user@domain.tld',
  })
# ---
# name: test_get_mobile_devices
  list([
    dict({
      'device_meta_data': dict({
        'locale': 'nl',
        'model': 'Model1',
        'os_version': '14',
        'platform': 'Android',
      }),
      'id': 123456,
      'location': dict({
        'at_home': True,
        'bearing_from_home': dict({
          'degrees': 21.4215315376382,
          'radians': 0.37387625615159,
        }),
        'relative_distance_from_home_fence': 0.0,
        'stale': False,
      }),
      'name': 'User1',
      'settings': dict({
        'geo_tracking_enabled': True,
        'on_demand_log_retrieval_enabled': False,
        'special_offers_enabled': True,
      }),
    }),
    dict({
      'device_meta_data': dict({
        'locale': 'nl',
        'model': 'Model2',
        'os_version': '14',
        'platform': 'Android',
      }),
      'id': 789012,
      'location': None,
      'name': 'User2',
      'settings': dict({
        'geo_tracking_enabled': False,
        'on_demand_log_retrieval_enabled': False,
        'special_offers_enabled': True,
      }),
    }),
  ])
# ---
# name: test_get_weather
  dict({
    'outside_temperature': dict({
      'celsius': 2.29,
      'fahrenheit': 36.12,
      'precision': dict({
        'celsius': 0.01,
        'fahrenheit': 0.01,
      }),
      'timestamp': '2024-02-27T20:29:49.360Z',
      'type': 'TEMPERATURE',
    }),
    'solar_intensity': dict({
      'percentage': 0.0,
      'timestamp': '2024-02-27T20:29:49.360Z',
      'type': 'PERCENTAGE',
    }),
    'weather_state': dict({
      'timestamp': '2024-02-27T20:29:49.360Z',
      'type': 'WEATHER_STATE',
      'value': 'NIGHT_CLOUDY',
    }),
  })
# ---
# name: test_get_zone_state[hvac_action_heat.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-06T17:38:30.302Z',
        'type': 'POWER',
        'value': 'OFF',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-07T04:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': 'AUTO',
        'horizontal_swing': None,
        'mode': 'HEAT',
        'power': 'ON',
        'swing': None,
        'temperature': dict({
          'celsius': 16.11,
          'fahrenheit': 61.0,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'TADO_MODE',
        'type_skill_based_app': 'TADO_MODE',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 50.4,
        'timestamp': '2020-03-06T18:06:09.546Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 21.4,
        'fahrenheit': 70.52,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-06T18:06:09.546Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': 'AUTO',
      'horizontal_swing': None,
      'mode': 'HEAT',
      'power': 'ON',
      'swing': None,
      'temperature': dict({
        'celsius': 16.11,
        'fahrenheit': 61.0,
        'precision': None,
        'timestamp': None,
        'type': None,
      }),
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.auto_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-05T03:56:38.627Z',
        'type': 'POWER',
        'value': 'ON',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T08:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': 'AUTO',
        'power': 'ON',
        'swing': None,
        'temperature': None,
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'TADO_MODE',
        'type_skill_based_app': 'TADO_MODE',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 62.5,
        'timestamp': '2020-03-05T03:55:38.160Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 24.8,
        'fahrenheit': 76.64,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-05T03:55:38.160Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': 'AUTO',
      'power': 'ON',
      'swing': None,
      'temperature': None,
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.cool_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-05T04:01:07.162Z',
        'type': 'POWER',
        'value': 'ON',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T08:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': 'AUTO',
        'horizontal_swing': None,
        'mode': 'COOL',
        'power': 'ON',
        'swing': None,
        'temperature': dict({
          'celsius': 17.78,
          'fahrenheit': 64.0,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'TADO_MODE',
        'type_skill_based_app': 'TADO_MODE',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 60.9,
        'timestamp': '2020-03-05T03:57:38.850Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 24.76,
        'fahrenheit': 76.57,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-05T03:57:38.850Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': 'AUTO',
      'horizontal_swing': None,
      'mode': 'COOL',
      'power': 'ON',
      'swing': None,
      'temperature': dict({
        'celsius': 17.78,
        'fahrenheit': 64.0,
        'precision': None,
        'timestamp': None,
        'type': None,
      }),
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.dry_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-05T04:02:40.867Z',
        'type': 'POWER',
        'value': 'ON',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T08:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': 'DRY',
        'power': 'ON',
        'swing': None,
        'temperature': None,
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'TADO_MODE',
        'type_skill_based_app': 'TADO_MODE',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 62.0,
        'timestamp': '2020-03-05T04:02:07.396Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 25.01,
        'fahrenheit': 77.02,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-05T04:02:07.396Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': 'DRY',
      'power': 'ON',
      'swing': None,
      'temperature': None,
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.fan_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-05T04:03:44.328Z',
        'type': 'POWER',
        'value': 'ON',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T08:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': 'FAN',
        'power': 'ON',
        'swing': None,
        'temperature': None,
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'TADO_MODE',
        'type_skill_based_app': 'TADO_MODE',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 62.0,
        'timestamp': '2020-03-05T04:02:07.396Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 25.01,
        'fahrenheit': 77.02,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-05T04:02:07.396Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': 'FAN',
      'power': 'ON',
      'swing': None,
      'temperature': None,
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.heat_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-05T03:59:36.390Z',
        'type': 'POWER',
        'value': 'ON',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T08:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': 'AUTO',
        'horizontal_swing': None,
        'mode': 'HEAT',
        'power': 'ON',
        'swing': None,
        'temperature': dict({
          'celsius': 16.11,
          'fahrenheit': 61.0,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'TADO_MODE',
        'type_skill_based_app': 'TADO_MODE',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 60.9,
        'timestamp': '2020-03-05T03:57:38.850Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 24.76,
        'fahrenheit': 76.57,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-05T03:57:38.850Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': 'AUTO',
      'horizontal_swing': None,
      'mode': 'HEAT',
      'power': 'ON',
      'swing': None,
      'temperature': dict({
        'celsius': 16.11,
        'fahrenheit': 61.0,
        'precision': None,
        'timestamp': None,
        'type': None,
      }),
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.hvac_off.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-02-29T05:34:10.318Z',
        'type': 'POWER',
        'value': 'OFF',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T04:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': None,
        'power': 'OFF',
        'swing': None,
        'temperature': None,
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'MANUAL',
        'type_skill_based_app': 'MANUAL',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 48.2,
        'timestamp': '2020-03-05T01:21:44.089Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 21.44,
        'fahrenheit': 70.59,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-05T01:21:44.089Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': None,
      'power': 'OFF',
      'swing': None,
      'temperature': None,
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'AWAY',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.manual_off.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-05T04:05:08.804Z',
        'type': 'POWER',
        'value': 'OFF',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T08:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': None,
        'power': 'OFF',
        'swing': None,
        'temperature': None,
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'MANUAL',
        'type_skill_based_app': 'MANUAL',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 62.0,
        'timestamp': '2020-03-05T04:02:07.396Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 25.01,
        'fahrenheit': 77.02,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-05T04:02:07.396Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': None,
      'power': 'OFF',
      'swing': None,
      'temperature': None,
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.offline.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-02-29T18:42:26.683Z',
        'type': 'POWER',
        'value': 'OFF',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'OFFLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T08:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': 'AUTO',
        'horizontal_swing': None,
        'mode': 'COOL',
        'power': 'ON',
        'swing': None,
        'temperature': dict({
          'celsius': 17.78,
          'fahrenheit': 64.0,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'TADO_MODE',
        'type_skill_based_app': 'TADO_MODE',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 61.6,
        'timestamp': '2020-03-03T21:23:57.846Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 25.05,
        'fahrenheit': 77.09,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-03T21:23:57.846Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': 'AUTO',
      'horizontal_swing': None,
      'mode': 'COOL',
      'power': 'ON',
      'swing': None,
      'temperature': dict({
        'celsius': 17.78,
        'fahrenheit': 64.0,
        'precision': None,
        'timestamp': None,
        'type': None,
      }),
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.smart_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-05T03:52:22.253Z',
        'type': 'POWER',
        'value': 'OFF',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-05T08:00:00.000Z',
    }),
    'open_window': None,
    'overlay': None,
    'overlay_type': None,
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 60.0,
        'timestamp': '2020-03-05T03:50:24.769Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 24.43,
        'fahrenheit': 75.97,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-05T03:50:24.769Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': 'MIDDLE',
      'horizontal_swing': None,
      'mode': 'COOL',
      'power': 'ON',
      'swing': None,
      'temperature': dict({
        'celsius': 20.0,
        'fahrenheit': 68.0,
        'precision': None,
        'timestamp': None,
        'type': None,
      }),
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.turning_off.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-06T19:05:21.835Z',
        'type': 'POWER',
        'value': 'ON',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': None,
    'next_time_block': dict({
      'start': '2020-03-07T04:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': None,
        'power': 'OFF',
        'swing': None,
        'temperature': None,
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'MANUAL',
        'type_skill_based_app': 'MANUAL',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 49.2,
        'timestamp': '2020-03-06T19:06:13.185Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 21.4,
        'fahrenheit': 70.52,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-06T19:06:13.185Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': None,
      'power': 'OFF',
      'swing': None,
      'temperature': None,
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[smartac3.with_swing.json]
  dict({
    'activity_data_points': dict({
      'ac_power': dict({
        'timestamp': '2020-03-27T23:02:22.260Z',
        'type': 'POWER',
        'value': 'ON',
      }),
      'heating_power': None,
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': dict({
      'setting': dict({
        'fan_level': None,
        'fan_speed': 'AUTO',
        'horizontal_swing': None,
        'mode': 'HEAT',
        'power': 'ON',
        'swing': 'ON',
        'temperature': dict({
          'celsius': 23.0,
          'fahrenheit': 73.4,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'AIR_CONDITIONING',
        'vertical_swing': None,
      }),
      'start': '2020-03-28T04:30:00Z',
    }),
    'next_time_block': dict({
      'start': '2020-03-28T04:30:00.000Z',
    }),
    'open_window': None,
    'overlay': None,
    'overlay_type': None,
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 42.3,
        'timestamp': '2020-03-28T02:09:27.830Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 20.88,
        'fahrenheit': 69.58,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-28T02:09:27.830Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': 'AUTO',
      'horizontal_swing': None,
      'mode': 'HEAT',
      'power': 'ON',
      'swing': 'ON',
      'temperature': dict({
        'celsius': 20.0,
        'fahrenheit': 68.0,
        'precision': None,
        'timestamp': None,
        'type': None,
      }),
      'type': 'AIR_CONDITIONING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[tadov2.heating.auto_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': None,
      'heating_power': dict({
        'percentage': 0.0,
        'timestamp': '2020-03-10T07:47:45.978Z',
        'type': 'PERCENTAGE',
        'value': None,
      }),
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': dict({
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': None,
        'power': 'ON',
        'swing': None,
        'temperature': dict({
          'celsius': 21.0,
          'fahrenheit': 69.8,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'HEATING',
        'vertical_swing': None,
      }),
      'start': '2020-03-10T17:00:00Z',
    }),
    'next_time_block': dict({
      'start': '2020-03-10T17:00:00.000Z',
    }),
    'open_window': None,
    'overlay': None,
    'overlay_type': None,
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 45.2,
        'timestamp': '2020-03-10T07:44:11.947Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 20.65,
        'fahrenheit': 69.17,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-10T07:44:11.947Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': None,
      'power': 'ON',
      'swing': None,
      'temperature': dict({
        'celsius': 20.0,
        'fahrenheit': 68.0,
        'precision': None,
        'timestamp': None,
        'type': None,
      }),
      'type': 'HEATING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[tadov2.heating.manual_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': None,
      'heating_power': dict({
        'percentage': 0.0,
        'timestamp': '2020-03-10T07:47:45.978Z',
        'type': 'PERCENTAGE',
        'value': None,
      }),
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': dict({
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': None,
        'power': 'ON',
        'swing': None,
        'temperature': dict({
          'celsius': 21.0,
          'fahrenheit': 69.8,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'HEATING',
        'vertical_swing': None,
      }),
      'start': '2020-03-10T17:00:00Z',
    }),
    'next_time_block': dict({
      'start': '2020-03-10T17:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': None,
        'power': 'ON',
        'swing': None,
        'temperature': dict({
          'celsius': 20.5,
          'fahrenheit': 68.9,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'HEATING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'MANUAL',
        'type_skill_based_app': 'MANUAL',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 45.2,
        'timestamp': '2020-03-10T07:44:11.947Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 20.65,
        'fahrenheit': 69.17,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-10T07:44:11.947Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': None,
      'power': 'ON',
      'swing': None,
      'temperature': dict({
        'celsius': 20.5,
        'fahrenheit': 68.9,
        'precision': None,
        'timestamp': None,
        'type': None,
      }),
      'type': 'HEATING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_state[tadov2.heating.off_mode.json]
  dict({
    'activity_data_points': dict({
      'ac_power': None,
      'heating_power': dict({
        'percentage': 0.0,
        'timestamp': '2020-03-10T07:47:45.978Z',
        'type': 'PERCENTAGE',
        'value': None,
      }),
    }),
    'geolocation_override': False,
    'geolocation_override_disable_time': None,
    'link': dict({
      'state': 'ONLINE',
    }),
    'next_schedule_change': dict({
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': None,
        'power': 'ON',
        'swing': None,
        'temperature': dict({
          'celsius': 21.0,
          'fahrenheit': 69.8,
          'precision': None,
          'timestamp': None,
          'type': None,
        }),
        'type': 'HEATING',
        'vertical_swing': None,
      }),
      'start': '2020-03-10T17:00:00Z',
    }),
    'next_time_block': dict({
      'start': '2020-03-10T17:00:00.000Z',
    }),
    'open_window': None,
    'overlay': dict({
      'projected_expiry': None,
      'setting': dict({
        'fan_level': None,
        'fan_speed': None,
        'horizontal_swing': None,
        'mode': None,
        'power': 'OFF',
        'swing': None,
        'temperature': None,
        'type': 'HEATING',
        'vertical_swing': None,
      }),
      'termination': dict({
        'projected_expiry': None,
        'type': 'MANUAL',
        'type_skill_based_app': 'MANUAL',
      }),
      'type': 'MANUAL',
    }),
    'overlay_type': 'MANUAL',
    'preparation': None,
    'sensor_data_points': dict({
      'humidity': dict({
        'percentage': 45.2,
        'timestamp': '2020-03-10T07:44:11.947Z',
        'type': 'PERCENTAGE',
      }),
      'inside_temperature': dict({
        'celsius': 20.65,
        'fahrenheit': 69.17,
        'precision': dict({
          'celsius': 0.1,
          'fahrenheit': 0.1,
        }),
        'timestamp': '2020-03-10T07:44:11.947Z',
        'type': 'TEMPERATURE',
      }),
    }),
    'setting': dict({
      'fan_level': None,
      'fan_speed': None,
      'horizontal_swing': None,
      'mode': None,
      'power': 'OFF',
      'swing': None,
      'temperature': None,
      'type': 'HEATING',
      'vertical_swing': None,
    }),
    'tado_mode': 'HOME',
    'termination_condition': None,
  })
# ---
# name: test_get_zone_states_ac_power[zone_states_ac_power.dry.json]
  list([
    dict({
      'zone_states': dict({
        '1': dict({
          'activity_data_points': dict({
            'ac_power': dict({
              'timestamp': '2024-07-05T04:02:40.867Z',
              'type': 'POWER',
              'value': 'ON',
            }),
            'heating_power': None,
          }),
          'geolocation_override': False,
          'geolocation_override_disable_time': None,
          'link': dict({
            'state': 'ONLINE',
          }),
          'next_schedule_change': None,
          'next_time_block': dict({
            'start': '2024-07-05T08:00:00.000Z',
          }),
          'open_window': None,
          'overlay': dict({
            'projected_expiry': None,
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': 'FAN',
              'power': 'ON',
              'swing': None,
              'temperature': None,
              'type': 'AIR_CONDITIONING',
              'vertical_swing': None,
            }),
            'termination': dict({
              'projected_expiry': None,
              'type': 'TADO_MODE',
              'type_skill_based_app': 'TADO_MODE',
            }),
            'type': 'MANUAL',
          }),
          'overlay_type': 'MANUAL',
          'preparation': None,
          'sensor_data_points': dict({
            'humidity': dict({
              'percentage': 62.0,
              'timestamp': '2024-07-05T04:02:07.396Z',
              'type': 'PERCENTAGE',
            }),
            'inside_temperature': dict({
              'celsius': 25.01,
              'fahrenheit': 77.02,
              'precision': dict({
                'celsius': 0.1,
                'fahrenheit': 0.1,
              }),
              'timestamp': '2024-07-05T04:02:07.396Z',
              'type': 'TEMPERATURE',
            }),
          }),
          'setting': dict({
            'fan_level': None,
            'fan_speed': None,
            'horizontal_swing': None,
            'mode': 'FAN',
            'power': 'ON',
            'swing': None,
            'temperature': None,
            'type': 'AIR_CONDITIONING',
            'vertical_swing': None,
          }),
          'tado_mode': 'HOME',
          'termination_condition': None,
        }),
      }),
    }),
  ])
# ---
# name: test_get_zone_states_ac_power[zone_states_ac_power.fan.json]
  list([
    dict({
      'zone_states': dict({
        '1': dict({
          'activity_data_points': dict({
            'ac_power': dict({
              'timestamp': '2024-07-05T04:02:40.867Z',
              'type': 'POWER',
              'value': 'ON',
            }),
            'heating_power': None,
          }),
          'geolocation_override': False,
          'geolocation_override_disable_time': None,
          'link': dict({
            'state': 'ONLINE',
          }),
          'next_schedule_change': None,
          'next_time_block': dict({
            'start': '2024-07-05T08:00:00.000Z',
          }),
          'open_window': None,
          'overlay': dict({
            'projected_expiry': None,
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': 'DRY',
              'power': 'ON',
              'swing': None,
              'temperature': None,
              'type': 'AIR_CONDITIONING',
              'vertical_swing': None,
            }),
            'termination': dict({
              'projected_expiry': None,
              'type': 'TADO_MODE',
              'type_skill_based_app': 'TADO_MODE',
            }),
            'type': 'MANUAL',
          }),
          'overlay_type': 'MANUAL',
          'preparation': None,
          'sensor_data_points': dict({
            'humidity': dict({
              'percentage': 62.0,
              'timestamp': '2024-07-05T04:02:07.396Z',
              'type': 'PERCENTAGE',
            }),
            'inside_temperature': dict({
              'celsius': 25.01,
              'fahrenheit': 77.02,
              'precision': dict({
                'celsius': 0.1,
                'fahrenheit': 0.1,
              }),
              'timestamp': '2024-07-05T04:02:07.396Z',
              'type': 'TEMPERATURE',
            }),
          }),
          'setting': dict({
            'fan_level': None,
            'fan_speed': None,
            'horizontal_swing': None,
            'mode': 'DRY',
            'power': 'ON',
            'swing': None,
            'temperature': None,
            'type': 'AIR_CONDITIONING',
            'vertical_swing': None,
          }),
          'tado_mode': 'HOME',
          'termination_condition': None,
        }),
      }),
    }),
  ])
# ---
# name: test_get_zone_states_heating_power
  list([
    dict({
      'zone_states': dict({
        '1': dict({
          'activity_data_points': dict({
            'ac_power': None,
            'heating_power': dict({
              'percentage': 0.0,
              'timestamp': '2024-02-27T20:30:01.259Z',
              'type': 'PERCENTAGE',
              'value': None,
            }),
          }),
          'geolocation_override': False,
          'geolocation_override_disable_time': None,
          'link': dict({
            'state': 'ONLINE',
          }),
          'next_schedule_change': dict({
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': None,
              'power': 'ON',
              'swing': None,
              'temperature': dict({
                'celsius': 18.0,
                'fahrenheit': 64.4,
                'precision': None,
                'timestamp': None,
                'type': None,
              }),
              'type': 'HEATING',
              'vertical_swing': None,
            }),
            'start': '2024-02-27T21:00:00Z',
          }),
          'next_time_block': dict({
            'start': '2024-02-27T21:00:00.000Z',
          }),
          'open_window': None,
          'overlay': dict({
            'projected_expiry': None,
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': None,
              'power': 'ON',
              'swing': None,
              'temperature': dict({
                'celsius': 17.0,
                'fahrenheit': 62.6,
                'precision': None,
                'timestamp': None,
                'type': None,
              }),
              'type': 'HEATING',
              'vertical_swing': None,
            }),
            'termination': dict({
              'projected_expiry': None,
              'type': 'MANUAL',
              'type_skill_based_app': 'MANUAL',
            }),
            'type': 'MANUAL',
          }),
          'overlay_type': 'MANUAL',
          'preparation': None,
          'sensor_data_points': dict({
            'humidity': dict({
              'percentage': 51.0,
              'timestamp': '2024-02-27T20:37:02.553Z',
              'type': 'PERCENTAGE',
            }),
            'inside_temperature': dict({
              'celsius': 17.98,
              'fahrenheit': 64.36,
              'precision': dict({
                'celsius': 0.1,
                'fahrenheit': 0.1,
              }),
              'timestamp': '2024-02-27T20:37:02.553Z',
              'type': 'TEMPERATURE',
            }),
          }),
          'setting': dict({
            'fan_level': None,
            'fan_speed': None,
            'horizontal_swing': None,
            'mode': None,
            'power': 'ON',
            'swing': None,
            'temperature': dict({
              'celsius': 17.0,
              'fahrenheit': 62.6,
              'precision': None,
              'timestamp': None,
              'type': None,
            }),
            'type': 'HEATING',
            'vertical_swing': None,
          }),
          'tado_mode': 'HOME',
          'termination_condition': None,
        }),
        '2': dict({
          'activity_data_points': dict({
            'ac_power': None,
            'heating_power': dict({
              'percentage': 11.0,
              'timestamp': '2024-02-27T20:37:22.791Z',
              'type': 'PERCENTAGE',
              'value': None,
            }),
          }),
          'geolocation_override': False,
          'geolocation_override_disable_time': None,
          'link': dict({
            'state': 'ONLINE',
          }),
          'next_schedule_change': None,
          'next_time_block': dict({
            'start': '2024-02-27T21:00:00.000Z',
          }),
          'open_window': None,
          'overlay': dict({
            'projected_expiry': None,
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': None,
              'power': 'ON',
              'swing': None,
              'temperature': dict({
                'celsius': 15.0,
                'fahrenheit': 59.0,
                'precision': None,
                'timestamp': None,
                'type': None,
              }),
              'type': 'HEATING',
              'vertical_swing': None,
            }),
            'termination': dict({
              'projected_expiry': None,
              'type': 'MANUAL',
              'type_skill_based_app': 'MANUAL',
            }),
            'type': 'MANUAL',
          }),
          'overlay_type': 'MANUAL',
          'preparation': None,
          'sensor_data_points': dict({
            'humidity': dict({
              'percentage': 56.9,
              'timestamp': '2024-02-27T20:38:14.791Z',
              'type': 'PERCENTAGE',
            }),
            'inside_temperature': dict({
              'celsius': 14.89,
              'fahrenheit': 58.8,
              'precision': dict({
                'celsius': 0.1,
                'fahrenheit': 0.1,
              }),
              'timestamp': '2024-02-27T20:38:14.791Z',
              'type': 'TEMPERATURE',
            }),
          }),
          'setting': dict({
            'fan_level': None,
            'fan_speed': None,
            'horizontal_swing': None,
            'mode': None,
            'power': 'ON',
            'swing': None,
            'temperature': dict({
              'celsius': 15.0,
              'fahrenheit': 59.0,
              'precision': None,
              'timestamp': None,
              'type': None,
            }),
            'type': 'HEATING',
            'vertical_swing': None,
          }),
          'tado_mode': 'HOME',
          'termination_condition': None,
        }),
        '3': dict({
          'activity_data_points': dict({
            'ac_power': None,
            'heating_power': dict({
              'percentage': 0.0,
              'timestamp': '2024-02-27T20:28:21.301Z',
              'type': 'PERCENTAGE',
              'value': None,
            }),
          }),
          'geolocation_override': False,
          'geolocation_override_disable_time': None,
          'link': dict({
            'state': 'ONLINE',
          }),
          'next_schedule_change': dict({
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': None,
              'power': 'ON',
              'swing': None,
              'temperature': dict({
                'celsius': 18.0,
                'fahrenheit': 64.4,
                'precision': None,
                'timestamp': None,
                'type': None,
              }),
              'type': 'HEATING',
              'vertical_swing': None,
            }),
            'start': '2024-02-27T21:00:00Z',
          }),
          'next_time_block': dict({
            'start': '2024-02-27T21:00:00.000Z',
          }),
          'open_window': None,
          'overlay': dict({
            'projected_expiry': None,
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': None,
              'power': 'ON',
              'swing': None,
              'temperature': dict({
                'celsius': 17.0,
                'fahrenheit': 62.6,
                'precision': None,
                'timestamp': None,
                'type': None,
              }),
              'type': 'HEATING',
              'vertical_swing': None,
            }),
            'termination': dict({
              'projected_expiry': None,
              'type': 'MANUAL',
              'type_skill_based_app': 'MANUAL',
            }),
            'type': 'MANUAL',
          }),
          'overlay_type': 'MANUAL',
          'preparation': None,
          'sensor_data_points': dict({
            'humidity': dict({
              'percentage': 55.5,
              'timestamp': '2024-02-27T20:37:12.297Z',
              'type': 'PERCENTAGE',
            }),
            'inside_temperature': dict({
              'celsius': 17.52,
              'fahrenheit': 63.54,
              'precision': dict({
                'celsius': 0.1,
                'fahrenheit': 0.1,
              }),
              'timestamp': '2024-02-27T20:37:12.297Z',
              'type': 'TEMPERATURE',
            }),
          }),
          'setting': dict({
            'fan_level': None,
            'fan_speed': None,
            'horizontal_swing': None,
            'mode': None,
            'power': 'ON',
            'swing': None,
            'temperature': dict({
              'celsius': 17.0,
              'fahrenheit': 62.6,
              'precision': None,
              'timestamp': None,
              'type': None,
            }),
            'type': 'HEATING',
            'vertical_swing': None,
          }),
          'tado_mode': 'HOME',
          'termination_condition': None,
        }),
        '4': dict({
          'activity_data_points': dict({
            'ac_power': None,
            'heating_power': dict({
              'percentage': 0.0,
              'timestamp': '2024-02-27T20:27:18.903Z',
              'type': 'PERCENTAGE',
              'value': None,
            }),
          }),
          'geolocation_override': False,
          'geolocation_override_disable_time': None,
          'link': dict({
            'state': 'ONLINE',
          }),
          'next_schedule_change': dict({
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': None,
              'power': 'ON',
              'swing': None,
              'temperature': dict({
                'celsius': 18.0,
                'fahrenheit': 64.4,
                'precision': None,
                'timestamp': None,
                'type': None,
              }),
              'type': 'HEATING',
              'vertical_swing': None,
            }),
            'start': '2024-02-27T21:00:00Z',
          }),
          'next_time_block': dict({
            'start': '2024-02-27T21:00:00.000Z',
          }),
          'open_window': None,
          'overlay': dict({
            'projected_expiry': None,
            'setting': dict({
              'fan_level': None,
              'fan_speed': None,
              'horizontal_swing': None,
              'mode': None,
              'power': 'OFF',
              'swing': None,
              'temperature': None,
              'type': 'HEATING',
              'vertical_swing': None,
            }),
            'termination': dict({
              'projected_expiry': None,
              'type': 'MANUAL',
              'type_skill_based_app': 'MANUAL',
            }),
            'type': 'MANUAL',
          }),
          'overlay_type': 'MANUAL',
          'preparation': None,
          'sensor_data_points': dict({
            'humidity': dict({
              'percentage': 63.3,
              'timestamp': '2024-02-27T20:37:20.931Z',
              'type': 'PERCENTAGE',
            }),
            'inside_temperature': dict({
              'celsius': 18.57,
              'fahrenheit': 65.43,
              'precision': dict({
                'celsius': 0.1,
                'fahrenheit': 0.1,
              }),
              'timestamp': '2024-02-27T20:37:20.931Z',
              'type': 'TEMPERATURE',
            }),
          }),
          'setting': dict({
            'fan_level': None,
            'fan_speed': None,
            'horizontal_swing': None,
            'mode': None,
            'power': 'OFF',
            'swing': None,
            'temperature': None,
            'type': 'HEATING',
            'vertical_swing': None,
          }),
          'tado_mode': 'HOME',
          'termination_condition': None,
        }),
      }),
    }),
  ])
# ---
# name: test_get_zones
  list([
    dict({
      'date_created': '2023-04-12T12:58:12.737Z',
      'dazzle_enabled': True,
      'dazzle_mode': dict({
        'enabled': True,
        'supported': True,
      }),
      'device_types': list([
        'VA02',
      ]),
      'devices': list([
        dict({
          'battery_state': 'NORMAL',
          'characteristics': dict({
            'capabilities': list([
              'INSIDE_TEMPERATURE_MEASUREMENT',
              'IDENTIFY',
            ]),
          }),
          'child_lock_enabled': True,
          'connection_state': dict({
            'timestamp': '2024-02-27T20:30:13.976Z',
            'value': True,
          }),
          'current_fw_version': '95.1',
          'device_type': 'VA02',
          'in_pairing_mode': None,
          'mounting_state': dict({
            'timestamp': '2024-02-04T10:17:00.266Z',
            'value': 'CALIBRATED',
          }),
          'mounting_state_with_error': 'CALIBRATED',
          'orientation': 'HORIZONTAL',
          'serial_no': 'Serial1',
          'short_serial_no': 'ShortSerial1',
        }),
      ]),
      'id': 2,
      'name': 'Zone1',
      'open_window_detection': dict({
        'enabled': False,
        'supported': True,
        'timeout_in_seconds': 900,
      }),
      'report_available': False,
      'show_schedule_detup': False,
      'supports_dazzle': True,
      'type': 'HEATING',
    }),
    dict({
      'date_created': '2023-01-29T16:02:14.530Z',
      'dazzle_enabled': True,
      'dazzle_mode': dict({
        'enabled': True,
        'supported': True,
      }),
      'device_types': list([
        'VA02',
      ]),
      'devices': list([
        dict({
          'battery_state': 'NORMAL',
          'characteristics': dict({
            'capabilities': list([
              'INSIDE_TEMPERATURE_MEASUREMENT',
              'IDENTIFY',
            ]),
          }),
          'child_lock_enabled': True,
          'connection_state': dict({
            'timestamp': '2024-02-27T20:32:05.188Z',
            'value': True,
          }),
          'current_fw_version': '95.1',
          'device_type': 'VA02',
          'in_pairing_mode': None,
          'mounting_state': dict({
            'timestamp': '2023-10-09T15:39:08.131Z',
            'value': 'CALIBRATED',
          }),
          'mounting_state_with_error': 'CALIBRATED',
          'orientation': 'HORIZONTAL',
          'serial_no': 'Serial2',
          'short_serial_no': 'ShortSerial2',
        }),
      ]),
      'id': 1,
      'name': 'Zone2',
      'open_window_detection': dict({
        'enabled': False,
        'supported': True,
        'timeout_in_seconds': 900,
      }),
      'report_available': False,
      'show_schedule_detup': True,
      'supports_dazzle': True,
      'type': 'HEATING',
    }),
    dict({
      'date_created': '2023-04-14T07:52:56.352Z',
      'dazzle_enabled': True,
      'dazzle_mode': dict({
        'enabled': True,
        'supported': True,
      }),
      'device_types': list([
        'VA02',
      ]),
      'devices': list([
        dict({
          'battery_state': 'NORMAL',
          'characteristics': dict({
            'capabilities': list([
              'INSIDE_TEMPERATURE_MEASUREMENT',
              'IDENTIFY',
            ]),
          }),
          'child_lock_enabled': True,
          'connection_state': dict({
            'timestamp': '2024-02-27T20:31:11.417Z',
            'value': True,
          }),
          'current_fw_version': '95.1',
          'device_type': 'VA02',
          'in_pairing_mode': None,
          'mounting_state': dict({
            'timestamp': '2024-02-26T13:33:10.647Z',
            'value': 'CALIBRATED',
          }),
          'mounting_state_with_error': 'CALIBRATED',
          'orientation': 'HORIZONTAL',
          'serial_no': 'Serial3',
          'short_serial_no': 'ShortSerial3',
        }),
      ]),
      'id': 3,
      'name': 'Zone3',
      'open_window_detection': dict({
        'enabled': False,
        'supported': True,
        'timeout_in_seconds': 900,
      }),
      'report_available': False,
      'show_schedule_detup': True,
      'supports_dazzle': True,
      'type': 'HEATING',
    }),
    dict({
      'date_created': '2023-04-14T07:58:45.196Z',
      'dazzle_enabled': True,
      'dazzle_mode': dict({
        'enabled': True,
        'supported': True,
      }),
      'device_types': list([
        'VA02',
      ]),
      'devices': list([
        dict({
          'battery_state': 'NORMAL',
          'characteristics': dict({
            'capabilities': list([
              'INSIDE_TEMPERATURE_MEASUREMENT',
              'IDENTIFY',
            ]),
          }),
          'child_lock_enabled': True,
          'connection_state': dict({
            'timestamp': '2024-02-27T20:33:21.903Z',
            'value': True,
          }),
          'current_fw_version': '95.1',
          'device_type': 'VA02',
          'in_pairing_mode': None,
          'mounting_state': dict({
            'timestamp': '2024-02-19T17:23:30.537Z',
            'value': 'CALIBRATED',
          }),
          'mounting_state_with_error': 'CALIBRATED',
          'orientation': 'HORIZONTAL',
          'serial_no': 'Serial4',
          'short_serial_no': 'ShortSerial4',
        }),
      ]),
      'id': 4,
      'name': 'Zone4',
      'open_window_detection': dict({
        'enabled': False,
        'supported': True,
        'timeout_in_seconds': 900,
      }),
      'report_available': False,
      'show_schedule_detup': True,
      'supports_dazzle': True,
      'type': 'HEATING',
    }),
  ])
# ---
